--- a/po/no/kpaint.po
+++ b/po/no/kpaint.po
@@ -304,7 +304,7 @@ msgstr "Fyll inn mønster"
 
 #: properties.cpp:76 properties.cpp:130 properties.cpp:293 properties.cpp:353
 msgid "None"
-msgstr ""
+msgstr "Ingen"
 
 #: properties.cpp:77 properties.cpp:131 properties.cpp:288 properties.cpp:348
 msgid "Solid"
